<resources>
    <string name="app_name">Mini-Sofascore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leagues">Leagues</string>
    <string name="settings">Settings</string>
    <string name="event_info">%s, %s, %s, Round %s</string>
    <string name="player_age">%d Yrs</string>
    <string name="dash">-</string>
    <string name="foul">Foul</string>
    <string name="ladder">#</string>
    <string name="matches_played">P</string>
    <string name="wins">W</string>
    <string name="draws">D</string>
    <string name="losses">L</string>
    <string name="difference">DIFF</string>
    <string name="goals">Goals</string>
    <string name="team">Team</string>
    <string name="points">PTS</string>
    <string name="ft">FT</string>
    <string name="pct">PCT</string>
    <string name="gb">GB</string>
    <string name="str">Str</string>
    <string name="coach">Coach</string>
    <string name="players">Players</string>
    <string name="team_info">Team info</string>
    <string name="total_players">Total Players</string>
    <string name="foreign_players">Foreign Players</string>
    <string name="coach_name">Coach: %s</string>
    <string name="tournaments">Tournaments</string>
    <string name="venue">Venue</string>
    <string name="next_match">Next match</string>
    <string name="stadium">Stadium</string>
    <string name="gb_mock">16.0</string>
    <string name="str_mock">4</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>
    <string name="matches">Matches</string>
    <string name="time">%d</string>
    <string name="current_score">%d  -  %d</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="about">About</string>
    <string name="academy">Sofascore Android Academy</string>
    <string name="academy_class">Class 2023</string>
    <string name="app">App Name</string>
    <string name="app_label">Mini Sofascore App</string>
    <string name="api_credit">API Credit</string>
    <string name="sofascore">Sofascore</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Dario Vidović</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="am_football">Am. Football</string>
    <string name="required">Required</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="forgotten_password">Forgot your password?</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="log_out">Log out</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="invalid_password">Min. 8 characters</string>
    <string name="password_no_match">Passwords don\'t match</string>
    <string name="fav">Favourite</string>
    <string name="unfav">Un favourite</string>
    <string name="my_matches">My matches</string>
    <string name="matches_count">%d Events</string>
    <string name="full_time">Full time</string>
    <string name="details">Details</string>
    <string name="standings">Standings</string>
    <string name="squad">Squad</string>
    <string name="no_matches">No matches</string>
    <string name="view_tournament_details">View Tournament Details</string>
    <string name="no_results_yet">No results yet.</string>
    <string name="enter_email">Enter e-mail</string>
    <string name="send">Send!</string>
    <string name="go_back">Go back</string>
    <string name="email_success">E-mail sent!</string>
    <string name="email_failure">Wrong e-mail address!</string>
</resources>