<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <TextView
        android:id="@+id/team_position"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ladder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/team_name"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/team_position"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_matches_played"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/matches_played"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/team_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_matches_won"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/wins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/team_matches_played"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/team_matches_lost"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/team_matches_won"
        android:text="@string/losses"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_diff"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/team_matches_lost"
        android:text="@string/difference"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_str"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/team_diff"
        android:text="@string/str"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_games_behind"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/team_str"
        android:text="@string/gb"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_percentage"
        style="@style/Tabular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/team_games_behind"
        android:layout_marginTop="16dp"
        android:text="@string/pct"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>