<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_primary_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/back_button_layout"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            style="@style/Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:minWidth="272dp"
            android:minHeight="28dp"
            android:text="@string/settings"
            android:textColor="@color/surface_surface_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_frame"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Assistive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:minWidth="272dp"
                android:text="@string/language"
                android:textColor="@color/color_primary_default" />

            <TextView
                style="@style/BodyParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="6dp"
                android:minWidth="272dp"
                android:text="@string/english"
                android:textColor="@color/on_surface_on_surface_lv_1" />
        </LinearLayout>

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/on_surface_on_surface_lv_4" />

    <TextView
        style="@style/Assistive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/theme"
        android:textColor="@color/color_primary_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            style="@style/BodyParagraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:minWidth="280dp"
            android:text="@string/light"
            android:textColor="@color/on_surface_on_surface_lv_1" />

        <RadioButton
            android:id="@+id/light_button"
            android:layout_width="28dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/BodyParagraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:minWidth="280dp"
            android:text="@string/dark"
            android:textColor="@color/on_surface_on_surface_lv_1" />

        <RadioButton
            android:id="@+id/dark_button"
            android:layout_width="28dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/on_surface_on_surface_lv_4" />

    <TextView
        style="@style/Headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/about"
        android:textColor="@color/on_surface_on_surface_lv_1" />

    <TextView
        style="@style/Headline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/academy"
        android:textColor="@color/on_surface_on_surface_lv_1" />

    <TextView
        style="@style/BodyParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/academy_class"
        android:textColor="@color/on_surface_on_surface_lv_1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:background="@color/on_surface_on_surface_lv_4" />


    <TextView
        style="@style/Assistive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app"
        android:textColor="@color/on_surface_on_surface_lv_2" />

    <TextView
        style="@style/BodyParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_label"
        android:textColor="@color/on_surface_on_surface_lv_1" />


    <TextView
        style="@style/Assistive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/api_credit"
        android:textColor="@color/on_surface_on_surface_lv_2" />

    <TextView
        style="@style/BodyParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sofascore"
        android:textColor="@color/on_surface_on_surface_lv_1" />


    <TextView
        style="@style/Assistive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/developer"
        android:textColor="@color/on_surface_on_surface_lv_2" />

    <TextView
        style="@style/BodyParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/developer_name"
        android:textColor="@color/on_surface_on_surface_lv_1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:background="@color/on_surface_on_surface_lv_4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginStart="114dp"
        android:src="@drawable/ic_sofascore_logo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:background="@color/color_primary_highlight"/>


</LinearLayout>